syntax = "proto3";

package filetree;

option go_package = "./filetree;filetree";

service FileService { rpc Upload(UploadRequest) returns (UploadResponse); }

message File {
  string content = 1;
  string id = 2;
  string name = 3;
  repeated string path = 4;
}

message Directory {
  string name = 1;
  repeated string path = 2;
  repeated Child children = 3;
}

message Child {
  oneof node {
    File file = 1;
    Directory directory = 2;
  }
}

// message BackendType {
//   oneof kind {
//     NodeJS nodejs = 1;
//     Flask flask = 2;
//     Java java = 3;
//     Ruby ruby = 4;
//   }
// }
//
// message NodeJS { string type = 1; }
// message Flask { string type = 1; }
// message Java { string type = 1; }
// message Ruby { string type = 1; }

enum BackendType {
  UNSPECIFIED = 0;
  NODEJS = 1;
  FLASK = 2;
  JAVA = 3;
  RUBY = 4;
}

message UploadRequest {
  Directory root = 1;
  BackendType projectType = 2;
}

message UploadResponse { string status = 1; }
